--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="./css/style.css" />
+	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
-	<title>Document</title>
+	<link rel="stylesheet" href="./css/style.css" />
+		<title>Document</title>
 </head>
 
 <body>
+	
 	<header>
 		<div class="header">
 			<h1>Creador de tablas</h1>
 			<h2>Estadistica</h2>
 		</div>
 	</header>
+	<hr>
 	<main>
 		<div class="container">
 			<hr>
@@ -27,7 +30,7 @@
 				<br>
 				<label>Datos:</label>
 				<input class="form-group" id="datos" type="text" />
-				<button class="btn btn-dark" id="sendButton">Enviar</button>
+				<button class="btn btn-dark boton" id="sendButton">Enviar</button>
 				<br>
 				<label class="form-check-label" for="flexCheckChecked">
 					Resolver por intervalos
