--- a/index.html
+++ b/index.html
@@ -5,31 +5,50 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
+
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
 	<link rel="stylesheet" href="./css/style.css" />
-		<title>Document</title>
+	<title>Document</title>
 </head>
 
 <body>
-	
+
 	<header>
-		<div class="header">
-			<h1>Creador de tablas</h1>
-			<h2>Estadistica</h2>
+		<div>
+			<ul class="nav justify-content-center bg-danger fs-2 ">
+				<li class="nav-item">
+					<a class="nav-link active text-white-50 bg-dark" aria-current="page" href="#">Inicio</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link disabled text-white-50 bg-dark" href="#">Disabled</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link disabled text-white-50 bg-dark" href="#">Disabled</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link disabled text-white-50 bg-dark">Disabled</a>
+				</li>
+			</ul>
 		</div>
+
 	</header>
 	<hr>
 	<main>
-		<div class="container">
+		<div>
+			<div class="header">
+				<h1>Creador de tablas</h1>
+				<h2>Estadistica</h2>
+			</div>
+		</div>
+		<div class="container-fluid">
 			<hr>
 			<div class="inputs">
 
 				<h3>Ingresar los datos</h3>
 				<br>
 				<label>Datos:</label>
-				<input class="form-group" id="datos" type="text" />
+				<input class="form-group border entrada" id="datos" type="text" />
 				<button class="btn btn-dark boton" id="sendButton">Enviar</button>
 				<br>
 				<label class="form-check-label" for="flexCheckChecked">
@@ -67,8 +86,8 @@
 
 		</div>
 	</main>
-	<footer>
-
+	<footer class="pie container-fluid">
+		<p>Created by: Bald Pablo Designer by: Lopez Sebastian</p>
 	</footer>
 
 
